Revert "Fixed issue causing horizonal scrolling on mobile and tablet"
This reverts commit d38ef11a33d4b32c7ed769a15b3f0e4a1d276e58.

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,11 +8,6 @@
 
 body {
   font-family: var(--font-major-mono);
-  overflow-x: hidden; /* Prevent horizontal scrolling */
-}
-
-html {
-  overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 .progress-bar {
